# ga-cli

./: Cargo.toml  README.md
.github/workflows/: action.yml
src/: main.rs
