[package]
name = "ga"
version = "0.1.0"
edition = "2024"
authors = ["Kunal Singh Dadhwal <kunalsinghdadhwal@gmail.com>"]
license = "MIT"
description = "Git Automation CLI Tool"
repository = "https://github.com/kunalsinghdadhwal/ga-cli"
readme = "README.md"
keywords = ["Git", "Clap", "Git Automation"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
colored = "2.1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false
overflow-checks = false

[package.metadata.cargo-bloat]
default-features = false
